Fixed Issue #52:  Added 'Close' button to the Console in place of collapse/expand.

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -546,7 +546,7 @@ fieldset.login legend {
 	font-family: monospace
 }
 
-#toggle_console {
+#show_console {
 	float: right;
 }
 
